# KidneyTumor-Segmentation

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
SpleenSeg/data_loading/: verify_dataset.py
SpleenSeg/preprocessing/: preprocess_dataset.py
SpleenSeg/serving/: __init__.py  app.py
SpleenSeg/serving/templates/: index.html
SpleenSeg/training/: dataset_25d.py  train.py  verify_dataloader_25d.py
